<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    tools:context="elizabeththompson.com.homework02.ContactDetailsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                app:srcCompat="@drawable/add_photo"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_first_name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_last_name"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_company"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_phone_number"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="187dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_email"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_url"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_address"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_birthday"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_nickname"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_facebookUrl"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_twitterUrl"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_skype"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_youtubeChannel"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="158dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
