<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elizabeththompson.com.homework02.Contacts">

    <Button
        android:id="@+id/button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/button_create_new_contact"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_contact"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_contact"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/button_display_contact"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/button_finish"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button4" />
</android.support.constraint.ConstraintLayout>
